# metasearch-mcp

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  smithery.yaml
src/: __init__.py  client.py  server.py  taivily_client.py
